--- a/learn-certs-pr/courses/dp-060t00.yml
+++ b/learn-certs-pr/courses/dp-060t00.yml
@@ -47,8 +47,8 @@ outlineSection: |-
   ### Modul 2&#58; Das Migrieren von MongoDB Workloads auf Cosmos DB
   MongoDB Workloads auf Cosmos DB migrieren
   #### Lektionen
-  Verständnis der Vorteile der Migration verstehen
-  Planung der Migration
+  - Verständnis der Vorteile der Migration verstehen
+  - Planung der Migration
   - Datenmigration
   ­- Anwendungsmigration
   - Überlegungen zur Migration
