--- a/learn-certs-pr/courses/mb-300t00.yml
+++ b/learn-certs-pr/courses/mb-300t00.yml
@@ -290,9 +290,9 @@ outlineSection: |-
   - Übungslabor
   - Modulübersicht
 
-  - Wie man die Korrelation zwischen Testfällen und Geschäftsanforderungen versteht
+  Wie man die Korrelation zwischen Testfällen und Geschäftsanforderungen versteht
   - Bewährte Taktiken für die Aufzeichnung von Testfällen
-  Task-Rekorder
+  - Task-Rekorder
   - Wie man eine BPM-Bibliothek für Szenarienakzeptanztests erteilt
   - Wie man ihren Testplan in Azure DevOps synchronisiert und konfiguriert
   - Ausführen von Tests
