--- a/learn-certs-pr/courses/mb-310t00.yml
+++ b/learn-certs-pr/courses/mb-310t00.yml
@@ -98,7 +98,7 @@ outlineSection: |-
 
 
   ### Modul 6&#58; Cash- und Bank-Management konfigurieren
-  In Dynamics 365 for Finance and Operations verwenden Unternehmen das Modul „Cash and bank management " zur Erstellung und Verwaltung von Bankkonten. Die Bankkontentabelle enthält einen Datensatz für jedes Bankkonto. Jeder Datensatz enthält Bankkontoinformationen, z. B. die folgenden&#58;
+  In Dynamics 365 for Finance and Operations verwenden Unternehmen das Modul „Cash and bank management" zur Erstellung und Verwaltung von Bankkonten. Die Bankkontentabelle enthält einen Datensatz für jedes Bankkonto. Jeder Datensatz enthält Bankkontoinformationen, z. B. die folgenden&#58;
   - Registrierungsnummer und Kontonummer
   - Anschrift
   - Weitere Kontaktinformationen
@@ -117,11 +117,11 @@ outlineSection: |-
   - Übungslabore
   - Modulübersicht
 
-  Banken erstellt und konfiguriert.
-  - Banklayouts erstellt und konfiguriert.
-  - Cash- und Bankverwaltungsparameter konfiguriert.
-  - Lieferanten- und Kundenbanken konfiguriert.
-  - Cashflow-Prognosen und Berichte konfiguriert.
+  Banken erstellt und konfiguriert
+  - Banklayouts erstellt und konfiguriert
+  - Cash- und Bankverwaltungsparameter konfiguriert
+  - Lieferanten- und Kundenbanken konfiguriert
+  - Cashflow-Prognosen und Berichte konfiguriert
 
 
   ### Modul 7&#58; Cash- and Bank-Management nutzen
@@ -170,7 +170,7 @@ outlineSection: |-
   - Modulübersicht
 
   Sie haben jetzt gelernt, wie Sie tägliche Aktivitäten im Hauptbuch verarbeiten und die Journalsteuerung verwenden, um ap
-  Sie haben mit Saldenkontrollkonten gearbeitet, um die Salden von Banken oder Liquiditätskonten anzuzeigen.
+  - Sie haben mit Saldenkontrollkonten gearbeitet, um die Salden von Banken oder Liquiditätskonten anzuzeigen.
   - Sie haben gelernt, wie Sie von Gutscheinvorlagen für den Betrag profitieren können, bei denen einfach der genaue Betrag kopiert wird
 
 
@@ -312,10 +312,10 @@ outlineSection: |-
   - Übungslabor
   - Modulübersicht
 
-  Kredit- und Inkassokomponenten konfiguriert.
-  - Konfigurieren Sie Restantenlisten, Kundenpools, Inkassoagenten und definition von Restantenzeiträumen.
-  - Interessen einrichten und verwalten.
-  - Einrichten und Verwalten von Inkassoschreiben.
+  Kredit- und Inkassokomponenten konfiguriert
+  - Konfigurieren Sie Restantenlisten, Kundenpools, Inkassoagenten und definition von Restantenzeiträumen
+  - Interessen einrichten und verwalten
+  - Einrichten und Verwalten von Inkassoschreiben
 
 
   ### Modul 19&#58; Kredit und Inkasso bearbeiten
