--- a/learn-certs-pr/courses/ms-500t00.yml
+++ b/learn-certs-pr/courses/ms-500t00.yml
@@ -103,7 +103,7 @@ outlineSection: |-
   - Einrichten Ihrer Organisation für die Identitätssynchronisierung
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  Beschreiben der Authentifizierungsoptionen für Microsoft 365.
+  - Beschreiben der Authentifizierungsoptionen für Microsoft 365.
   - Die Verzeichnissynchronisierung erläutern.
   - Die Verzeichnissynchronisierung planen.
   - Beschreiben von Azure AD Connect und seine Verwendung.
@@ -122,8 +122,8 @@ outlineSection: |-
 
 
   #### Labor &#58; Bedingten Zugriff verwenden, um MFA zu aktivieren
-  MFA Authentifizierungs Pilot (MFA für bestimmte Anwendungen erforderlich)
-  Bedingter MFA Zugang (Abschluss einer MFA Einführung)
+  - MFA Authentifizierungs Pilot (MFA für bestimmte Anwendungen erforderlich)
+  - Bedingter MFA Zugang (Abschluss einer MFA Einführung)
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
   - Beschreiben Sie das Konzept des bedingten Zugriffs.
@@ -143,7 +143,7 @@ outlineSection: |-
 
 
   #### Labor &#58; Microsoft Secure Score verwenden
-  Verbessern Sie Ihre sichere Punktzahl im Microsoft 365 Security Center
+  - Verbessern Sie Ihre sichere Punktzahl im Microsoft 365 Security Center
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
   - Beschreiben Sie verschiedene Techniken, die Angreifer verwenden, um Benutzerkonten per E-Mail zu manipulieren.
@@ -185,8 +185,8 @@ outlineSection: |-
 
 
   #### Labor &#58; Benutzung des Angriffssimulators
-  Durchführung einer simulierten Spear Phishing Attacke
-  Simulierte Passwortangriffe durchführen
+  - Durchführung einer simulierten Spear Phishing Attacke
+  - Simulierte Passwortangriffe durchführen
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
   - Beschreiben, wie man mit dem Threat Explorer Bedrohungen untersuchen und Ihren Mandanten schützen können.
